# Mirage

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README-desc.md  README.md  config_tmp.json  evaluate_task.py  evaluator.py  prompts.py  pyproject.toml  request.py  requirements-dev.txt  requirements.txt  setup.py  test_api.py  test_output.jsonl
examples/: test_cases.py
mmoment/: __init__.py  cli.py
model_test/qwenvl_inference/: counting_infer.py  qwen2.5vl_hf.py  requirements.txt  spatial_infer.py
tests/: counting_tiny.json  counting_tiny_4o.json  counting_tiny_4o_mini.json  counting_tiny_anthropic.claude-3-haiku-20240307-v1:0.json  counting_tiny_claude_3_5_sonnet_20240620_v1.json  counting_tiny_cluade_3_sonnet.json  counting_tiny_qwenvl_max.json  relation_tiny_4o.json  relation_tiny_4o_mini.json  relation_tiny_qwen-vl-max.json  relations_tiny.json  releations_tiny_anthropic.claude-3-5-sonnet-20240620-v1:0.json  releations_tiny_anthropic.claude-3-haiku-20240307-v1:0.json  releations_tiny_anthropic.claude-3-sonnet-20240229-v1:0.json  releations_tiny_gemini-2.0-flash-001.json  releations_tiny_qwen-vl-max.json  test_evaluator.py  v2_tiny.json  v2_tiny_1.json  v2_tiny_4o.json  v2_tiny_4o_mini.json  v2_tiny_anthropic.claude-3-5-sonnet-20240620-v1:0.json  v2_tiny_anthropic.claude-3-haiku-20240307-v1:0.json  v2_tiny_anthropic.claude-3-sonnet-20240229-v1:0.json  v2_tiny_gemini-2.0-flash-001.json  v2_tiny_qwen-vl-max.json
utils/: __init__.py  config.py  media.py
